save data and generate html for delivery options

--- a/javascript-amazon-project/checkout.html
+++ b/javascript-amazon-project/checkout.html
@@ -83,6 +83,13 @@
       </div>
     </div>
 
+
+    
+    <!--to load code (js) from external library (i.e internet)-->
+    <!--<script src="https://unpkg.com/dayjs@1.11.10/dayjs.min.js"></script>-->
+    
+
+    <!--to load code from other file-->
     <script type="module" src="scripts/checkout.js"></script>
   </body>
 </html>
